# solana-tamagotchi

./: .gitignore  .vercelignore  ADDICTED_STYLE_MECHANICS.md  ADMIN_SETUP.md  ANTI_SCAM_PROTECTION.md  Anchor.toml  BEST_TWEETS.txt  BLOCKCHAIN_FRONTEND_READY.md  BUDGET_300_STRATEGY.md  BUG_REPORT_FORM.html  BUILD_OPTIONS.md  CONTRACT_1_TAMAGOTCHI.rs  CONTRACT_2_REWARD_POOL.rs  CONTRACT_READY.md  CONTRACT_SETUP.md  DEPLOYMENT_SUCCESS.md  DEPLOY_COMMANDS.txt  DEPLOY_INSTRUCTIONS.md  DEPLOY_NOW.md  DEVNET_SETUP_COMPLETE.md  DEVNET_TESTING.md  DEVNET_TESTING_PLAN.md  Dockerfile  ECONOMY_ANALYSIS.md  FINAL_DEPLOYMENT_GUIDE.md  FINAL_SUCCESS.md  FUNDRAISING_GUIDE.md  GAME_MECHANICS.md  GET_DEVNET_SOL.md  GET_MORE_DEVNET_SOL.md  GOTCHIFI_TWEETS.md  INDEX.md  LAUNCH_TWEET.txt  MARKETING.md  MARKETING_STRATEGY.md  NEXT_STEPS.md  NFT_CONCEPT.md  NFT_CONTRACT_README.md  NFT_SETUP_GUIDE.md  NFT_БЫСТРЫЙ_СТАРТ.md  (+243 more)
.cargo/: .global-cache
FINAL_BETA_READY/: BUG_REPORT_FORM.html  index.html  vercel.json
assets/: convert-to-png.html  create-preview.html  create-simple-png.html
docs/: BEAUTIFUL_SHARING_SETUP.md  CREATE_PNG_IMAGE.md
js/: admin-env.js  transaction-logger.js
my-vibe-sdk/: EXAMPLES_FOR_TAMAGOTCHI.md  package.json  worker-configuration.d.ts  wrangler.jsonc
programs/tamagotchi/: Cargo.toml
programs/tamagotchi/src/: lib.rs  lib_simple.rs
sql/: create_battles_table.sql  create_transactions_table.sql
vercel_deploy/: .vercelignore  BUG_REPORT_FORM.html  DEPLOY_FIX.md  QUICK_FIX.txt  START_HERE.txt  clean_and_deploy.bat  index.html  redeploy_fixed.bat  vercel.json  (+2 more)
(+400 files in other folders)
