[package]
name = "tamagotchi"
version = "0.1.0"
description = "Crypto Tamagotchi - On-chain pet game on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tamagotchi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
mpl-token-metadata = "4.1.2" # ✅ Стабильная версия для Rust 1.75.0